--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,8 +11,8 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: url('https://i.imgur.com/7SbtKvw.png');
-    --home-image: url('https://i.imgur.com/233d55Y.gif');
+    --background-image: url('https://cdn.discordapp.com/attachments/1088915211777486919/1145936831255433248/goodnight-punpun-wallpaper-12.jpg');
+    --home-image: url('https://https://cdn.discordapp.com/emojis/816883329583808612.gif?size=48&name=KleeREEE&quality=lossless');
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
