--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,11 +11,11 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: url('https://i.imgur.com/7SbtKvw.png');
-    --home-image: url('https://i.imgur.com/233d55Y.gif');
-    --background-solid: #161921;
-    --background-solid-dark: #101218;
-    --background-solid-darker: #0c0e12;
+    --background-image: url('https://cdn.discordapp.com/attachments/1088915211777486919/1149392021069500476/IMG_7835.jpg');
+    --home-image: url('https://www.deviantart.com/gerxess/art/Boom-Klee-this-is-not-food-Animated-sticker-882670635');
+    --background-solid: #a01219;
+    --background-solid-dark: #a01229;
+    --background-solid-darker: #a01239;
     --accent: 37, 172, 232;
     --accent-alt: 29, 101, 134;
 }
